// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Cascader can be selected 1`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 2`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected 3`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-slide-up-leave ant-slide-up-leave-start ant-slide-up"
  style="pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 1`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-cascader-dropdown-rtl ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-rtl"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 2`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-cascader-dropdown-rtl ant-slide-up-leave ant-slide-up-leave-start ant-slide-up"
  style="pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-rtl"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader can be selected in RTL direction 3`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-cascader-dropdown-rtl ant-slide-up-leave ant-slide-up-leave-start ant-slide-up"
  style="pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-rtl"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="left"
              class="anticon anticon-left"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="left"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly with defaultValue 1`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: auto;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang"
          role="menuitemcheckbox"
          title="Zhejiang"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Zhejiang
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand"
          data-path-key="jiangsu"
          role="menuitemcheckbox"
          title="Jiangsu"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="true"
          class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
          role="menuitemcheckbox"
          title="Hangzhou"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Hangzhou
          </div>
          <div
            class="ant-cascader-menu-item-expand-icon"
          >
            <span
              aria-label="right"
              class="anticon anticon-right"
              role="img"
            >
              <svg
                aria-hidden="true"
                data-icon="right"
                fill="currentColor"
                focusable="false"
                height="1em"
                viewBox="64 64 896 896"
                width="1em"
              >
                <path
                  d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
                />
              </svg>
            </span>
          </div>
        </li>
      </ul>
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
          title="West Lake"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            West Lake
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader popup correctly with defaultValue RTL 1`] = `
<div
  class="ant-select ant-cascader ant-select-rtl ant-select-single ant-select-allow-clear ant-select-show-arrow ant-select-open"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-expanded="true"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-item"
      title="Zhejiang / Hangzhou"
    >
      Zhejiang / Hangzhou
    </span>
  </div>
  <div>
    <div
      class="ant-select-dropdown ant-cascader-dropdown ant-cascader-dropdown-rtl ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
      style="opacity: 0; pointer-events: none; min-width: auto;"
    >
      <div>
        <div
          class="ant-cascader-menus ant-cascader-rtl"
        >
          <ul
            class="ant-cascader-menu"
            role="menu"
          >
            <li
              aria-checked="false"
              class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
              data-path-key="zhejiang"
              role="menuitemcheckbox"
              title="Zhejiang"
            >
              <div
                class="ant-cascader-menu-item-content"
              >
                Zhejiang
              </div>
              <div
                class="ant-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </div>
            </li>
            <li
              aria-checked="false"
              class="ant-cascader-menu-item ant-cascader-menu-item-expand"
              data-path-key="jiangsu"
              role="menuitemcheckbox"
              title="Jiangsu"
            >
              <div
                class="ant-cascader-menu-item-content"
              >
                Jiangsu
              </div>
              <div
                class="ant-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </div>
            </li>
          </ul>
          <ul
            class="ant-cascader-menu"
            role="menu"
          >
            <li
              aria-checked="true"
              class="ant-cascader-menu-item ant-cascader-menu-item-expand ant-cascader-menu-item-active"
              data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou"
              role="menuitemcheckbox"
              title="Hangzhou"
            >
              <div
                class="ant-cascader-menu-item-content"
              >
                Hangzhou
              </div>
              <div
                class="ant-cascader-menu-item-expand-icon"
              >
                <span
                  aria-label="left"
                  class="anticon anticon-left"
                  role="img"
                >
                  <svg
                    aria-hidden="true"
                    data-icon="left"
                    fill="currentColor"
                    focusable="false"
                    height="1em"
                    viewBox="64 64 896 896"
                    width="1em"
                  >
                    <path
                      d="M724 218.3V141c0-6.7-7.7-10.4-12.9-6.3L260.3 486.8a31.86 31.86 0 000 50.3l450.8 352.1c5.3 4.1 12.9.4 12.9-6.3v-77.3c0-4.9-2.3-9.6-6.1-12.6l-360-281 360-281.1c3.8-3 6.1-7.7 6.1-12.6z"
                    />
                  </svg>
                </span>
              </div>
            </li>
          </ul>
          <ul
            class="ant-cascader-menu"
            role="menu"
          >
            <li
              aria-checked="false"
              class="ant-cascader-menu-item"
              data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
              role="menuitemcheckbox"
              title="West Lake"
            >
              <div
                class="ant-cascader-menu-item-content"
              >
                West Lake
              </div>
            </li>
          </ul>
        </div>
      </div>
    </div>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="arrow-up"
      class="anticon anticon-arrow-up ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-up"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 6.81l3.97 3.97a.75.75 0 101.06-1.06l-4.5-4.5a.75.75 0 00-1.06 0l-4.5 4.5a.75.75 0 101.06 1.06L8 6.81z"
        />
      </svg>
    </span>
  </span>
  <span
    aria-hidden="true"
    class="ant-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="close-fullfiled"
      class="anticon anticon-close-fullfiled"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-fullfiled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 6.3L5.88 5.16a.5.5 0 00-.77.64l.06.07L7.3 8l-2.12 2.12a.5.5 0 00.64.77l.07-.06L8 8.7l2.12 2.12a.5.5 0 00.77-.64l-.06-.07L8.7 8l2.12-2.12a.5.5 0 00-.64-.77l-.07.06L8 7.3 5.88 5.17 8 7.3z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Cascader rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="ant-select ant-cascader ant-select-rtl ant-select-single ant-select-allow-clear ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-placeholder"
    />
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="arrow-down"
      class="anticon anticon-arrow-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
        />
      </svg>
    </span>
  </span>
</div>
`;

exports[`Cascader should highlight keyword and filter when search in Cascader 1`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: 0;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-path-key="zhejiang__RC_CASCADER_SPLIT__hangzhou__RC_CASCADER_SPLIT__xihu"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <span
              class="ant-cascader-menu-item-keyword"
            >
              Z
            </span>
            hejiang / Hang
            <span
              class="ant-cascader-menu-item-keyword"
            >
              z
            </span>
            hou / West Lake
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-path-key="jiangsu__RC_CASCADER_SPLIT__nanjing__RC_CASCADER_SPLIT__zhonghuamen"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            Jiangsu / Nanjing / 
            <span
              class="ant-cascader-menu-item-keyword"
            >
              Z
            </span>
            hong Hua Men
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader should highlight keyword and filter when search in Cascader with same field name of label and value 1`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: 0;"
>
  <div>
    <div
      class="ant-cascader-menus"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item"
          data-path-key="Zhejiang__RC_CASCADER_SPLIT__Hangzhou__RC_CASCADER_SPLIT__West Lake"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <span
              class="ant-cascader-menu-item-keyword"
            >
              Z
            </span>
            hejiang / Hang
            <span
              class="ant-cascader-menu-item-keyword"
            >
              z
            </span>
            hou / West Lake
          </div>
        </li>
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-disabled"
          data-path-key="Zhejiang__RC_CASCADER_SPLIT__Hangzhou__RC_CASCADER_SPLIT__Xia Sha"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <span
              class="ant-cascader-menu-item-keyword"
            >
              Z
            </span>
            hejiang / Hang
            <span
              class="ant-cascader-menu-item-keyword"
            >
              z
            </span>
            hou / Xia Sha
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader should render not found content 1`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-select-dropdown-empty ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: 0;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-menu-empty"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-disabled"
          data-path-key="__EMPTY__"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <div
              class="ant-empty ant-empty-normal ant-empty-small"
            >
              <div
                class="ant-empty-image"
              >
                <svg
                  fill="none"
                  height="96"
                  viewBox="0 0 96 96"
                  width="96"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <ellipse
                    cx="48"
                    cy="85"
                    fill="#F2F2F2"
                    rx="45"
                    ry="6"
                  />
                  <path
                    d="M15.5 7C15.5 6.17157 16.1716 5.5 17 5.5H66.6371L79.5 17.4859V83C79.5 83.8284 78.8284 84.5 78 84.5H17C16.1716 84.5 15.5 83.8284 15.5 83V7Z"
                    fill="white"
                    stroke="#D8D8D8"
                  />
                  <path
                    d="M66 6H67.1293V16.4295C67.1293 17.1939 67.7192 17.8136 68.4469 17.8136H79V19H68.4469C67.0955 19 66 17.8491 66 16.4295V6Z"
                    fill="#DBDBDB"
                  />
                  <circle
                    cx="91"
                    cy="14"
                    fill="#D8D8D8"
                    opacity="0.5"
                    r="3"
                  />
                  <circle
                    cx="85"
                    cy="7"
                    fill="#D8D8D8"
                    opacity="0.3"
                    r="2"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M96 6.5C96 5.11929 94.8807 4 93.5 4C92.1193 4 91 5.11929 91 6.5C91 7.88071 92.1193 9 93.5 9C94.8807 9 96 7.88071 96 6.5ZM92 6.5C92 5.67157 92.6716 5 93.5 5C94.3284 5 95 5.67157 95 6.5C95 7.32843 94.3284 8 93.5 8C92.6716 8 92 7.32843 92 6.5Z"
                    fill="#D8D8D8"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M67 7V16.5258C67 16.5258 67.0952 18 68.2714 18C69.4476 18 79 18 79 18L67 7Z"
                    fill="#FAFAFA"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <div
                class="ant-empty-description"
              >
                No Data
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader should show not found content when options.length is 0 1`] = `
<div
  class="ant-select-dropdown ant-cascader-dropdown ant-select-dropdown-empty ant-slide-up-appear ant-slide-up-appear-prepare ant-slide-up"
  style="opacity: 0; pointer-events: none; min-width: 0;"
>
  <div>
    <div
      class="ant-cascader-menus ant-cascader-menu-empty"
    >
      <ul
        class="ant-cascader-menu"
        role="menu"
      >
        <li
          aria-checked="false"
          class="ant-cascader-menu-item ant-cascader-menu-item-disabled"
          data-path-key="__EMPTY__"
          role="menuitemcheckbox"
        >
          <div
            class="ant-cascader-menu-item-content"
          >
            <div
              class="ant-empty ant-empty-normal ant-empty-small"
            >
              <div
                class="ant-empty-image"
              >
                <svg
                  fill="none"
                  height="96"
                  viewBox="0 0 96 96"
                  width="96"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <ellipse
                    cx="48"
                    cy="85"
                    fill="#F2F2F2"
                    rx="45"
                    ry="6"
                  />
                  <path
                    d="M15.5 7C15.5 6.17157 16.1716 5.5 17 5.5H66.6371L79.5 17.4859V83C79.5 83.8284 78.8284 84.5 78 84.5H17C16.1716 84.5 15.5 83.8284 15.5 83V7Z"
                    fill="white"
                    stroke="#D8D8D8"
                  />
                  <path
                    d="M66 6H67.1293V16.4295C67.1293 17.1939 67.7192 17.8136 68.4469 17.8136H79V19H68.4469C67.0955 19 66 17.8491 66 16.4295V6Z"
                    fill="#DBDBDB"
                  />
                  <circle
                    cx="91"
                    cy="14"
                    fill="#D8D8D8"
                    opacity="0.5"
                    r="3"
                  />
                  <circle
                    cx="85"
                    cy="7"
                    fill="#D8D8D8"
                    opacity="0.3"
                    r="2"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M96 6.5C96 5.11929 94.8807 4 93.5 4C92.1193 4 91 5.11929 91 6.5C91 7.88071 92.1193 9 93.5 9C94.8807 9 96 7.88071 96 6.5ZM92 6.5C92 5.67157 92.6716 5 93.5 5C94.3284 5 95 5.67157 95 6.5C95 7.32843 94.3284 8 93.5 8C92.6716 8 92 7.32843 92 6.5Z"
                    fill="#D8D8D8"
                    fill-rule="evenodd"
                    opacity="0.3"
                  />
                  <path
                    clip-rule="evenodd"
                    d="M67 7V16.5258C67 16.5258 67.0952 18 68.2714 18C69.4476 18 79 18 79 18L67 7Z"
                    fill="#FAFAFA"
                    fill-rule="evenodd"
                  />
                </svg>
              </div>
              <div
                class="ant-empty-description"
              >
                No Data
              </div>
            </div>
          </div>
        </li>
      </ul>
    </div>
  </div>
</div>
`;

exports[`Cascader support controlled mode 1`] = `
<div
  class="ant-select ant-cascader ant-select-single ant-select-allow-clear ant-select-show-arrow"
>
  <div
    class="ant-select-selector"
  >
    <span
      class="ant-select-selection-search"
    >
      <input
        aria-autocomplete="list"
        aria-controls="rc_select_TEST_OR_SSR_list"
        aria-haspopup="listbox"
        aria-owns="rc_select_TEST_OR_SSR_list"
        autocomplete="off"
        class="ant-select-selection-search-input"
        id="rc_select_TEST_OR_SSR"
        readonly=""
        role="combobox"
        style="opacity: 0;"
        type="search"
        unselectable="on"
        value=""
      />
    </span>
    <span
      class="ant-select-selection-item"
      title="Zhejiang / Hangzhou / West Lake"
    >
      Zhejiang / Hangzhou / West Lake
    </span>
  </div>
  <span
    aria-hidden="true"
    class="ant-select-arrow"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="arrow-down"
      class="anticon anticon-arrow-down ant-select-suffix"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="arrow-down"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8.25 9.19L4.28 5.22a.75.75 0 00-1.06 1.06l4.5 4.5c.3.3.77.3 1.06 0l4.5-4.5a.75.75 0 00-1.06-1.06L8.25 9.19z"
        />
      </svg>
    </span>
  </span>
  <span
    aria-hidden="true"
    class="ant-select-clear"
    style="user-select: none;"
    unselectable="on"
  >
    <span
      aria-label="close-fullfiled"
      class="anticon anticon-close-fullfiled"
      role="img"
    >
      <svg
        aria-hidden="true"
        data-icon="close-fullfiled"
        fill="currentColor"
        focusable="false"
        height="1em"
        viewBox="0 0 16 16"
        width="1em"
      >
        <path
          d="M8 1a7 7 0 110 14A7 7 0 018 1zm0 6.3L5.88 5.16a.5.5 0 00-.77.64l.06.07L7.3 8l-2.12 2.12a.5.5 0 00.64.77l.07-.06L8 8.7l2.12 2.12a.5.5 0 00.77-.64l-.06-.07L8.7 8l2.12-2.12a.5.5 0 00-.64-.77l-.07.06L8 7.3 5.88 5.17 8 7.3z"
        />
      </svg>
    </span>
  </span>
</div>
`;
